--- a/index.html
+++ b/index.html
@@ -11,6 +11,31 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="main">
+      <header class="top">
+        <p>Huddle</p>
+      </header>
+      <div class="mid">
+        <img src="images/illustration-mockups.svg" alt="" />
+        <div>
+          <h1>Build The Community Your Fans will Love</h1>
+          <p>
+            Huddle re-imagines the way we built communities. You have a voice,
+            but so does your audience. Create communications with you users as
+            you engage in genuine discussion,
+          </p>
+          <button>Register</button>
+        </div>
+      </div>
+      <div class="bottom"></div>
+    </div>
+  </body>
 </html>
