--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -35,7 +36,7 @@
       </header>
       <div class="mid">
         <img src="images/illustration-mockups.svg" alt="" />
-        <div>
+        <div class="innermid">
           <h1>Build The Community Your Fans will Love</h1>
           <p>
             Huddle re-imagines the way we built communities. You have a voice,
